--- a/something.html
+++ b/something.html
@@ -1,1 +1,9 @@
-<html><title>the title of your study</title><head></head><body>some ideas; each sentence begins  with <br>and ends with </br></body></html>
+<html>
+<title>
+</title>
+<head>
+</head>
+<body>
+<p>Hello World</p>
+</body>
+</html>
