--- a/index.html
+++ b/index.html
@@ -1,9 +1,29 @@
 <html>
-<title>
-</title>
 <head>
+<title>Page Title</title>
 </head>
 <body>
-<p>Hello World</p>
+
+<h1>Hello!</h1>
+<p>My study will be Dead by Daylight.</p>
+
+</body>
+</html>
+<html>
+<head>
+  <style>
+    img {
+      max-width: 300px;
+      height: auto;
+      display: block;
+      margin: 20px;
+    }
+  </style>
+</head>
+<body>
+
+  <img src="https://cdn1.epicgames.com/spt-assets/2b2299be8ae84d679d4dc57c55af1510/dead-by-daylight-bff2u.jpg"
+       alt="Dead by Daylight">
+
 </body>
 </html>
